Enable always show scrollbar to prevent header shift

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow: scroll;
+}
+
 body {
   margin: 0;
   padding: 0;
